[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rusty_board"
version = "0.1.0"
description = "High-performance tree branch physics engine for Python games"
requires-python = ">=3.8"

[tool.maturin]
# Build only the library, not the Macroquad binary
features = ["pyo3/extension-module"]
